[package]
name = "lasagna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4"
zip = "2.0.0"
clap = { version = '4', features = ['derive'] }
#hex-literal = "0.3.4"
md-5 = "0.10.6"
sha2 = "0.10.8"
base16ct = { version = "0.2.0", features = ['alloc'] }
time = { version = "0.3.39", features = ['std', 'local-offset'] }
