[package]
name = "lasagna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4"
zip = "5.1.1"
clap = { version = '4', features = ['derive'] }
md-5 = "0.10.6"
sha2 = "0.10.9"
# see https://github.com/fizyk20/generic-array/issues/158
generic-array = { version = "=0.14.9" }
base16ct = { version = "0.3.0", features = ['alloc'] }
time = { version = "0.3.44", features = ['std', 'local-offset'] }
